fix the image overflow problem

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -27,4 +27,5 @@
 body {
   background-color: var(--bg);
   font-family: var(--text);
+  max-width: 100%;
 }
